--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<span class="image avatar"><img src="images/profile-photo.png" alt="" /></span>
+					<span class="image avatar"><img src="images/newphoto.jpeg" alt="" /></span>
 					<h1 id="logo"><a href="#">Carlo Catindig</a></h1>
 					<p>I love turning PSD designs<br> into WordPress magic every day!</p>
 				</header>
